--- a/ColorVision/Plugins/PluginManagerWindow.xaml
+++ b/ColorVision/Plugins/PluginManagerWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:properties="clr-namespace:ColorVision.Properties"
         xmlns:hc ="https://handyorg.github.io/handycontrol"
         d:DataContext="{d:DesignInstance local:PluginManager}"
-        xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
+        xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf" xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="{x:Static properties:Resources.PluginManagerWindow}" Background="{DynamicResource GlobalBackground}" Height="720" Width="1000" Initialized="Window_Initialized">
 
@@ -21,15 +21,50 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+            
             <Grid>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Button Content="仓库" Command="{Binding OpenStoreCommand}" Margin="0,0,5,0"/>
-                    <Button Content="安装包" Command="{Binding InstallPackageCommand}" Margin="0,0,5,0"/>
-                    <hc:ComboBox x:Name="DefalutSearchComboBox" Width="160" HorizontalAlignment="Left"  IsEditable="True" Margin="0,0,5,0" Text="{Binding SearchName, UpdateSourceTrigger=PropertyChanged}" hc:InfoElement.ShowClearButton="True"/>
-                    <Button Content="安装" Command="{Binding DownloadPackageCommand}" Margin="0,0,5,0"/>
-                    <Button Content="View" Command="{Binding OpenViewDllViersionCommand}" Margin="0,0,5,0"/>
+                <StackPanel Margin="5,5,0,0">
+                    <StackPanel Orientation="Horizontal" Margin="0,0,0,5" Height="20">
+                        <Button Content="访问仓库" Command="{Binding OpenStoreCommand}" Margin="0,0,5,0"/>
+                        <Button Content="安装下载好包" Command="{Binding InstallPackageCommand}" Margin="0,0,5,0"/>
+                        <Button Content="DLL版本查看" Command="{Binding OpenViewDllViersionCommand}" Margin="0,0,5,0"/>
+                        <Button Content="重启软件" Command="{Binding RestartCommand}" Margin="0,0,5,0"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                        <Grid>
+                            <hc:ComboBox x:Name="DefalutSearchComboBox" Width="250" Padding="25,1,2,1"   IsEditable="True" Text="{Binding SearchName, UpdateSourceTrigger=PropertyChanged}" BorderThickness="1" hc:InfoElement.Placeholder="{x:Static properties:Resources.Search}" hc:InfoElement.ShowClearButton="True" BorderBrush="#CCCEDB"   VerticalContentAlignment="Center"  />
+                            <Viewbox Width="20 " Height="20" HorizontalAlignment="Left" Margin="4,0,0,0">
+                                <Rectangle Width="25 " Height="25" >
+                                    <Rectangle.Resources>
+                                        <SolidColorBrush x:Key="canvas" Opacity="0" />
+                                        <SolidColorBrush x:Key="light-defaultgrey-10" Color="{DynamicResource defaultgreyColor}" Opacity=" 0.1" />
+                                        <SolidColorBrush x:Key="light-defaultgrey" Color="{DynamicResource defaultgreyColor}" Opacity="1" />
+                                    </Rectangle.Resources>
+                                    <Rectangle.Fill>
+                                        <DrawingBrush Stretch="None">
+                                            <DrawingBrush.Drawing>
+                                                <DrawingGroup>
+                                                    <DrawingGroup x:Name="canvas">
+                                                        <GeometryDrawing Brush="{DynamicResource canvas}" Geometry="F1M0,0H16V16H0Z" />
+                                                    </DrawingGroup>
+                                                    <DrawingGroup x:Name="level_1">
+                                                        <GeometryDrawing Brush="{DynamicResource light-defaultgrey-10}" Geometry="F1M11.5,6.5a5,5,0,1,1-5-5A5,5,0,0,1,11.5,6.5Z" />
+                                                        <GeometryDrawing Brush="{DynamicResource light-defaultgrey}" Geometry="F1M1,6.5a5.5,5.5,0,0,0,9.017,4.224l5.129,5.13.708-.708-5.13-5.129A5.5,5.5,0,1,0,1,6.5Zm1,0A4.5,4.5,0,1,1,6.5,11,4.505,4.505,0,0,1,2,6.5Z" />
+                                                    </DrawingGroup>
+                                                </DrawingGroup>
+                                            </DrawingBrush.Drawing>
+                                        </DrawingBrush>
+                                    </Rectangle.Fill>
+                                </Rectangle>
+                            </Viewbox>
+                        </Grid>
+                        <Button Content="安装" Command="{Binding DownloadPackageCommand}" Margin="5,0,5,0"/>
+                    </StackPanel>
+
+
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,5,0">
+
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,5,5,0">
                     <Button  Command="{Binding EditConfigCommand}" Padding="2" Height="27" Width="27" >
                         <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" RenderTransformOrigin="0.5,0.5"  FontSize="20" Foreground="{DynamicResource GlobalTextBrush}">
                             <TextBlock.RenderTransform>
@@ -70,6 +105,7 @@
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate  DataType="{x:Type local:PluginInfoVM}">
                                     <StackPanel Orientation="Horizontal">
+                                        <ui:ToggleSwitch  IsChecked="{Binding PluginInfo.Enabled}"  Margin="0,0,10,0" />
                                         <Image Source="{Binding Icon}" Width="20" Margin="0,0,10,0"/>
                                         <TextBlock  Text="{Binding Name,Mode=OneWay}"/>
                                     </StackPanel>
@@ -77,34 +113,14 @@
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-
-                        <GridViewColumn Header="{x:Static properties:Resources.Version}">
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate  DataType="{x:Type local:PluginInfoVM}">
-                                    <TextBlock  Text="{Binding AssemblyVersion}"/>
-                                </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                        </GridViewColumn>
-                        <GridViewColumn Header="新的版本" Width="80">
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate  DataType="{x:Type local:PluginInfoVM}">
-                                    <TextBlock  Text="{Binding LastVersion}"/>
-                                </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                        </GridViewColumn>
-                        <GridViewColumn Header="{x:Static properties:Resources.Command}">
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate  DataType="{x:Type local:PluginInfoVM}">
-                                    <StackPanel Orientation="Horizontal">
-                                        <Button Content="{x:Static properties:Resources.Update}" Command="{Binding UpdateCommand}"  Margin="0,0,5,0"/>
-                                    </StackPanel>
-                                </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                        </GridViewColumn>
                         <GridViewColumn Header="加载">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate  DataType="{x:Type local:PluginInfoVM}">
-                                    <CheckBox IsChecked="{Binding PluginInfo.Enabled}"/>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Width="50" Text="{Binding AssemblyVersion}" Margin="0,0,5,0"/>
+                                        <TextBlock  Width="50"  Text="{Binding LastVersion}"  Margin="0,0,5,0"/>
+                                        <Button Content="{x:Static properties:Resources.Update}" Command="{Binding UpdateCommand}" Visibility="{Binding PluginInfo.Enabled,Converter={StaticResource bool2VisibilityConverter}}" />
+                                    </StackPanel>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
@@ -114,25 +130,33 @@
        
         </Grid>
 
-        <Border x:Name="BorderContent" CornerRadius="5" Margin="0,20,5,5" d:DataContext="{d:DesignInstance local:PluginInfoVM}" Grid.Column="1">
+        <Border x:Name="BorderContent" CornerRadius="5" Margin="0,0,5,5" d:DataContext="{d:DesignInstance local:PluginInfoVM}" Grid.Column="1">
             <Grid Margin="5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Border BorderBrush="{DynamicResource BorderBrush}" BorderThickness="0,0,0,1 " Margin="0,0,0,2">
-                    <DockPanel>
-                        <Image Source="{Binding Icon}" Width="50" Margin="10"/>
-                        <StackPanel HorizontalAlignment="Left">
-                            <TextBox IsReadOnly="True" BorderThickness="0" Background="Transparent" Text="{Binding Name}" FontWeight="Bold" FontSize="20"  />
-                            <StackPanel Orientation="Horizontal">
-                                <TextBox IsReadOnly="True" BorderThickness="0" Background="Transparent" Text="{Binding PackageName}" />
-                                <TextBox IsReadOnly="True" BorderThickness="0" Background="Transparent" Text="{Binding AssemblyVersion}" />
-                                <TextBox IsReadOnly="True" BorderThickness="0" Background="Transparent" Text="{Binding AssemblyBuildDate,StringFormat=yyyy/MM/dd}" />
+                    <Grid>
+                        <DockPanel>
+                            <Image Source="{Binding Icon}" Width="50" Margin="10"/>
+                            <StackPanel HorizontalAlignment="Left">
+                                <TextBox IsReadOnly="True" BorderThickness="0" Background="Transparent" Text="{Binding Name}" FontWeight="Bold" FontSize="20"  />
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBox IsReadOnly="True" BorderThickness="0" Background="Transparent" Text="{Binding PackageName}" />
+                                    <TextBox IsReadOnly="True" BorderThickness="0" Background="Transparent" Text="{Binding AssemblyVersion}" />
+                                    <TextBox IsReadOnly="True" BorderThickness="0" Background="Transparent" Text="{Binding AssemblyBuildDate,StringFormat=yyyy/MM/dd hh:mm:ss}" />
+                                </StackPanel>
                             </StackPanel>
+                        </DockPanel>
+                        <StackPanel  HorizontalAlignment="Right" VerticalAlignment="Top">
+                            <TextBox IsReadOnly="True" BorderThickness="0" Background="Transparent" Text="{Binding PluginInfo.Manifest.DllName}" HorizontalAlignment="Right" Padding="3"/>
+                            <TextBox IsReadOnly="True" BorderThickness="0" Background="Transparent" Text="{Binding PluginInfo.Manifest.Requires}"  HorizontalAlignment="Right" Padding="3"/>
+                            <Button Content="OpenLocalPath" Background="Transparent" BorderThickness="0" Command="{Binding OpenLocalPathCommand}"  HorizontalAlignment="Right"/>
 
                         </StackPanel>
-                    </DockPanel>
+                    </Grid>
+
                 </Border>
                 <TabControl x:Name="TabControl1" Grid.Row="1" SelectionChanged="TabControl_SelectionChanged">
                     <TabItem Header="README">
@@ -141,12 +165,12 @@
                     <TabItem Header="CHANGELOG" > 
                         <wv2:WebView2 Name="webViewChangeLog"  Grid.Row="1" />
                     </TabItem>
-                    <TabItem Header="插件详细信息">
-                        <StackPanel>
-                            <DockPanel>
-
-                            </DockPanel>
-                        </StackPanel>
+                    <TabItem Header="接口管理">
+                        <ScrollViewer>
+                            <StackPanel  x:Name="DetailInfo">
+                                
+                            </StackPanel>
+                        </ScrollViewer>
                     </TabItem>
                 </TabControl>
   
