--- a/Engine/ColorVision.Engine/Templates/SysDictionary/CreateDicModeDetail.xaml
+++ b/Engine/ColorVision.Engine/Templates/SysDictionary/CreateDicModeDetail.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ColorVision.Engine.Templates.SysDictionary.CreateDicModeDetail"
+﻿<Window x:Class="ColorVision.Engine.Templates.CreateDicModeDetail"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.Engine.Templates.SysDictionary"
+        xmlns:local="clr-namespace:ColorVision.Engine.Templates"
         xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
         xmlns:hc="https://handyorg.github.io/handycontrol"
         mc:Ignorable="d"
