--- a/Engine/ColorVision.Engine/Templates/SysDictionary/EditDictionaryMode.xaml
+++ b/Engine/ColorVision.Engine/Templates/SysDictionary/EditDictionaryMode.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="ColorVision.Engine.Templates.SysDictionary.EditDictionaryMode"
+﻿<UserControl x:Class="ColorVision.Engine.Templates.EditDictionaryMode"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ColorVision.Engine.Templates.SysDictionary"
+             xmlns:local="clr-namespace:ColorVision.Engine.Templates"
              xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance local:DicModParam}"
