--- a/Engine/ColorVision.Engine/Services/Devices/Calibration/Views/ViewCalibration.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Calibration/Views/ViewCalibration.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ColorVision.Engine.Services.Devices.Calibration.Views"
-             xmlns:model="clr-namespace:ColorVision.Engine.Services.Dao"
+             xmlns:se="clr-namespace:ColorVision.Engine.Services"
              xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
              xmlns:im="clr-namespace:ColorVision.ImageEditor;assembly=ColorVision.ImageEditor"
              xmlns:vm="clr-namespace:ColorVision.Common.MVVM;assembly=ColorVision.Common"
@@ -98,49 +98,49 @@
                         </GridView.ColumnHeaderContainerStyle>
                         <GridViewColumn  Header="{x:Static properties:Resources.SerialNumber1}" Width="50">
                             <GridViewColumn.CellTemplate>
-                                <DataTemplate  DataType="{x:Type model:ViewResultImage}">
+                                <DataTemplate  DataType="{x:Type se:ViewResultImage}">
                                     <TextBlock Text="{Binding Id}"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
                         <GridViewColumn  Header="{x:Static properties:Resources.Info}" Width="50">
                             <GridViewColumn.CellTemplate>
-                                <DataTemplate  DataType="{x:Type model:ViewResultImage}">
+                                <DataTemplate  DataType="{x:Type se:ViewResultImage}">
                                     <TextBlock Text="{ Binding  ResultMsg}" />
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
                         <GridViewColumn  Header="{x:Static properties:Resources.File}" Width="120">
                             <GridViewColumn.CellTemplate>
-                                <DataTemplate  DataType="{x:Type model:ViewResultImage}">
+                                <DataTemplate  DataType="{x:Type se:ViewResultImage}">
                                     <TextBlock Text="{ Binding  FileUrl}"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
                         <GridViewColumn  Header="{x:Static properties:Resources.Result}" Width="50">
                             <GridViewColumn.CellTemplate>
-                                <DataTemplate  DataType="{x:Type model:ViewResultImage}">
+                                <DataTemplate  DataType="{x:Type se:ViewResultImage}">
                                     <TextBlock Text="{ Binding  ResultCode}" />
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
                         <GridViewColumn  Header="{x:Static properties:Resources.ImageInfo}" >
                             <GridViewColumn.CellTemplate>
-                                <DataTemplate  DataType="{x:Type model:ViewResultImage}">
+                                <DataTemplate  DataType="{x:Type se:ViewResultImage}">
                                     <TextBlock Text="{ Binding  ImgFrameInfo}" />
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
                         <GridViewColumn  Header="{x:Static properties:Resources.Duration}" Width="100">
                             <GridViewColumn.CellTemplate>
-                                <DataTemplate  DataType="{x:Type model:ViewResultImage}">
+                                <DataTemplate  DataType="{x:Type se:ViewResultImage}">
                                     <TextBlock Text="{ Binding  TotalTime}" />
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
                         <GridViewColumn  Header="{x:Static properties:Resources.Parameter}" >
                             <GridViewColumn.CellTemplate>
-                                <DataTemplate  DataType="{x:Type model:ViewResultImage}">
+                                <DataTemplate  DataType="{x:Type se:ViewResultImage}">
                                     <TextBlock Text="{ Binding   ReqParams}"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
