--- a/Projects/ProjectARVRLite/ARVRWindow.xaml
+++ b/Projects/ProjectARVRLite/ARVRWindow.xaml
@@ -86,7 +86,7 @@
                         </StackPanel>
                     </Grid>
                     <Grid  Grid.Row="1">
-                        <ListView x:Name="listView1" BorderThickness="0" Padding="0" SelectedIndex="{Binding ViewResultManager.ViewReslutsSelectedIndex}"  SelectionChanged="listView1_SelectionChanged"  PreviewKeyDown="listView1_PreviewKeyDown" Grid.RowSpan="2" >
+                        <ListView x:Name="listView1" BorderThickness="0" Padding="0" SelectedIndex="{Binding ViewResultManager.ViewReslutsSelectedIndex}"  SelectionChanged="listView1_SelectionChanged"  PreviewKeyDown="listView1_PreviewKeyDown" >
                             <ListView.Resources >
                                 <ContextMenu x:Key="ItemContextMenu" Opened="ContextMenu_Opened" />
                             </ListView.Resources>
