--- a/Engine/ColorVision.Engine/Services/Devices/Camera/Views/ViewCamera.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Camera/Views/ViewCamera.xaml
@@ -105,6 +105,13 @@
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
+                        <GridViewColumn  Header="bool" Width="40">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate  DataType="{x:Type se:ViewResultImage}">
+                                    <TextBlock Text="{ Binding  IsFileExists}" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
                         <GridViewColumn  Header="{x:Static properties:Resources.Info}" Width="50">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate  DataType="{x:Type se:ViewResultImage}">
@@ -119,6 +126,7 @@
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
+
                         <GridViewColumn  Header="{x:Static properties:Resources.Result}" Width="50">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate  DataType="{x:Type se:ViewResultImage}">
